--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "node-sass": "^7.0.1",
+    "photo-sphere-viewer": "^4.6.4",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "vue": "^3.2.13",
+    "vue-agile": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
