--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "photo-sphere-viewer": "^4.6.4",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
-    "vue": "^3.2.13",
-    "vue-agile": "^2.0.0",
-    "vue-carousel-3d": "^1.0.1",
-    "vue-slick-carousel": "^1.0.6"
+    "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
